--- a/aula4_tarefa/style.css
+++ b/aula4_tarefa/style.css
@@ -8,7 +8,7 @@
 
 /* Seletor por tag */
 p {
-    color: red;
+    color: rebeccapurple;
 }
 
 
@@ -47,7 +47,7 @@ li {
 
 a {
     text-decoration: none;
-    color: #ffffff;
+    color: #de2e2e;
 }
 
 
@@ -79,3 +79,9 @@ img {
     font-weight: 400;
     font-style: normal;
 }
+
+.link{
+    color: blue;
+}
+.link-container {
+    text-align: center; /* Centraliza o texto (links) dentro deste contêiner */
