--- a/aula4_tarefa/style.css
+++ b/aula4_tarefa/style.css
@@ -89,7 +89,7 @@ img {
 h1 {
     font-size: 48px; /* Tamanho grande para destaque */
     color: #2c3e50; /* Cor escura para o texto */
-    font-family: 'Georgia', serif; /* Fonte serifada para um toque clássico */
+    font-family: 'Georgia', serif; /* Fonte diferente */
     text-align: center; /* Centraliza o texto */
     margin-top: 30px; /* Espaço acima do título */
     margin-bottom: 30px; /* Espaço abaixo do título */
