--- a/aula4_tarefa/style.css
+++ b/aula4_tarefa/style.css
@@ -21,10 +21,6 @@ p {
 }
 
 
-.fontImpact {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-
 /* Menu */
 nav {
     background-color: #000000;
@@ -66,19 +62,13 @@ a:hover {
 
 
 img {
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 400px;
     border: 2px solid black;
-    border-radius: 15%;
-    margin: 100px;
+    border-radius: 10%;
+    margin: 10px;
 }
 
-
-.nerko {
-    font-family: "Nerko One", cursive;
-    font-weight: 400;
-    font-style: normal;
-}
 
 .link{
     color: blue;
@@ -98,4 +88,17 @@ h1 {
     background-color: #ecf0f1; /* Cor de fundo leve */
     padding: 10px; /* Espaço interno ao redor do texto */
     border-radius: 5px; /* Bordas arredondadas no fundo */
+}
+body {
+    background-color: rgba(106, 88, 88, 0.708); /* Fundo preto */
+}
+
+.menu-opcoes {
+    list-style: none; /* Remove os marcadores de lista */
+    padding: 0;
+    margin: 0;
+    display: flex; /* Faz os itens do menu ficarem em linha */
+    background-color: #333; /* Fundo escuro para o menu */
+    border-radius: 8px; /* Bordas arredondadas no menu */
+    
 }
